Clicking Scene Collection Does Not Select Collection Contents #58875

Closed
opened 2018-12-06 16:27:32 +01:00 by Steve Warner · 5 comments

System Information
Operating system: Windows 10
Graphics card: Geforce 1080

Blender Version
Broken:
2.80 Beta
2018-12-03 00:27
Hash: a205493426

Short description of error

In the Outliner, when in Scene view, you can click on a Collection and it will select all of the contents of that collection. This is good, and as expected. However when you go to View Layer view, if you click on a Collection, it will not highlight the contents of that collection. This is not consistent with the Scene view, and is counter intuitive. Clicking the Collection name should select the contents of that collection regardless of what Outliner view mode you're in.

**System Information** Operating system: Windows 10 Graphics card: Geforce 1080 **Blender Version** Broken: 2.80 Beta 2018-12-03 00:27 Hash: a205493426b **Short description of error** In the Outliner, when in Scene view, you can click on a Collection and it will select all of the contents of that collection. This is good, and as expected. However when you go to View Layer view, if you click on a Collection, it will not highlight the contents of that collection. This is not consistent with the Scene view, and is counter intuitive. Clicking the Collection name should select the contents of that collection regardless of what Outliner view mode you're in.
Author

Added subscriber: @stevewarner

Added subscriber: @stevewarner
Brecht Van Lommel was assigned by Sebastian Parborg 2018-12-06 17:49:31 +01:00

This issue was referenced by bbe5a95d05

This issue was referenced by bbe5a95d05f7c9c7286e8f785ac92c2e16a114b2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Changed status from 'Resolved' to: 'Archived'

Changed status from 'Resolved' to: 'Archived'

The behavior is debatable, but would not consider the current behavior a bug.

In the View Layer view you change the active collection in the view layer by clicking. It's important to be able to do that without changing the object selection.

The behavior is debatable, but would not consider the current behavior a bug. In the View Layer view you change the active collection in the view layer by clicking. It's important to be able to do that without changing the object selection.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58875
No description provided.