Fix T58875: object paste and append Active Collection property not working.